--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 <head>
     <title> Nadya Kobylskaya </title>
     <meta charset="utf-8">
-    <link rel = "stylesheet" href="style.css">
+    <link rel = "stylesheet" href="style3.css">
     </head>
     <body class="fon">
        <header>
