--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
     <title> Nadya Kobylskaya </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href="style.css">
+    <link rel = "stylesheet" href="style3.css">
     </head>
     <body class="fon">
        <header>
